[package]
name = "try-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
poem = { version = "3.0.0", features = ["cookie"] }
tracing-subscriber = "0.3.18"
serde = "1.0.197"
serde_json = "1.0.115"
async-trait = "0.1.79"
uuid = { version = "1.8.0", features = ["v4"] }
futures-core = "0.3.30"
futures-util = "0.3.30"
sync_wrapper = "1.0.0"
tokio-util = "0.7.10"
async-stream = "0.3.2"
tokio-stream = "0.1.15"
mime = "0.3.17"
chrono = "0.4.20"
